[package]
name = "core-to-core-latency"
description = "Measures CPU core-to-core latency"
authors = ["Nicolas Viennot <nicolas@viennot.com>"]
repository = "https://github.com/nviennot/core-to-core-latency"
license = "MIT"
readme = "README.md"
version = "1.2.0"
edition = "2021"
exclude = ["/results"]

[dependencies]
core_affinity = "0.8.1"
quanta = "0.12.3"
clap = { version = "4.5.17", features = ["derive"] }
ndarray = "0.16.1"
ansi_term = "0.12"
ordered-float = "4.2.2"
cache-padded = "1.2"
crossbeam-utils = { version = "0.8", default-features = false }
raw-cpuid = "11.1.0"
